Applications/MonitoringAgent/base/resources/network-policy-alloy-to-alloy-logs-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alloy-to-alloy-logs-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: alloy
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: alloy-logs
      ports:
        - protocol: TCP
          port: 12345
