Applications/MonitoringAgent/base/resources/network-policy-alloy-to-alloy-logs.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alloy-to-alloy-logs
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: alloy-logs
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: alloy
      ports:
        - protocol: TCP
          port: 12345
