Applications/MonitoringAgent/base/resources/network-policy-kube-state-metrics-kubernetes-api-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-state-metrics-kubernetes-api-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: kube-state-metrics
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.0.2.1/32
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 192.0.2.11/32
      ports:
        - protocol: TCP
          port: 6443
